# GIRadianceRegressionFunction

./: .gitignore  .gitmodules  README.md
Engine/: README.md  readme.txt
Engine/AtlasEngineGI/: CMakeLists.txt
Engine/AtlasEngineGI/include/: atlaswidget.h  fileloader.h  mainwindow.h  menu.h  menuelement.h  openglincludes.h  ui_mainwindow.h
Engine/AtlasEngineGI/include/data/: camera.h  material.h  model.h  neuralnetwork.h  quad.h  scene.h  scenegraphnode.h  texture.h
Engine/AtlasEngineGI/include/data/geometry/: kdtree.h  kdtreenode.h  mesh.h
Engine/AtlasEngineGI/include/data/lighting/: light.h  pointlight.h
Engine/AtlasEngineGI/include/loader/: fileloader.h  meshloader.h  neuralnetworkloader.h  objloader.h  pbrtloader.h
Engine/AtlasEngineGI/include/render/: computeshader.h  framebuffer.h  pipeline.h  renderer.h  shader.h
Engine/AtlasEngineGI/include/render/process/: computeshaderprocess.h  geometryrenderprocess.h  hdrrenderprocess.h  indirectlightingprocess.h  lightingrenderprocess.h  renderprocess.h  shadowmaprenderprocess.h  switchlightingprocess.h
Engine/AtlasEngineGI/lib/assimp/: libassimpd.3.dylib
Engine/AtlasEngineGI/lib/msvs2015/: OpenGL32.Lib  assimp.lib  assimp32.lib  zlibstatic32.lib  zlibstaticd.lib
Engine/AtlasEngineGI/lib/openmesh/: libOpenMeshCore.6.3.dylib  libOpenMeshCore.dylib  libOpenMeshTools.6.3.dylib  libOpenMeshTools.dylib
Engine/AtlasEngineGI/networksXML/: best_neural_network.xml  best_neural_network_2.xml  best_neural_network_3.xml  neural_network_100.xml  neural_network_pierre.xml  neural_network_pierre_1.xml  neural_network_pierre_19h07.xml  neural_network_pierre_2.xml  neural_network_pierre_20h28.xml  neural_network_romain_2.xml  neural_network_romain_3.xml  neuralnetwork.xml  neuralnetworksave1.xml
Engine/AtlasEngineGI/scenes/: cornell-box-petite.pbrt  cornell-box.pbrt  cornell.mtl  scene-minimale.pbrt  scene.pbrt
Engine/AtlasEngineGI/scenes/obj-scenes/: cornell.mtl
Engine/AtlasEngineGI/scenes/pbrt-scenes/: cornell-box.pbrt
Engine/AtlasEngineGI/shader/: computeshader2  computeshader_neuralnetwork
Engine/AtlasEngineGI/shaders/: FXAA.frag  FXAA.vert  blurh.frag  blurmipmap.frag  blurv.frag  color.frag  color.vert  compute_optimise_2_2.comp  computeshader  computeshader2  computeshader_neuralnetwork  computeshader_neuralnetwork_optimise  computeshader_neuralnetwork_optimise2  depth.frag  downscaling.frag  hdr.frag  metaforward.frag  metaforward.vert  metagbuffer.frag  metagbuffer.vert  metalighting.frag  metalighting.vert  mix.frag  neural_network.comp  quad.frag  ssao.frag  ssaoblur.frag  switch.frag
Engine/AtlasEngineGI/src/: atlaswidget.cpp  main.cpp  mainwindow.cpp  menu.cpp  menuelement.cpp
Engine/AtlasEngineGI/src/data/: camera.cpp  material.cpp  model.cpp  quad.cpp  scene.cpp  scenegraphnode.cpp  texture.cpp
Engine/AtlasEngineGI/src/data/geometry/: kdtree.cpp  kdtreenode.cpp  mesh.cpp
Engine/AtlasEngineGI/src/data/lighting/: light.cpp  pointlight.cpp
Engine/AtlasEngineGI/src/loader/: fileloader.cpp  meshloader.cpp  neuralnetworkloader.cpp  objloader.cpp  pbrtloader.cpp
Engine/AtlasEngineGI/src/render/: computeshader.cpp  framebuffer.cpp  pipeline.cpp  renderer.cpp  shader.cpp
Engine/AtlasEngineGI/src/render/process/: computeshaderprocess.cpp  geometryrenderprocess.cpp  hdrrenderprocess.cpp  indirectlightingprocess.cpp  lightingrenderprocess.cpp  renderprocess.cpp  shadowmaprenderprocess.cpp  switchlightingprocess.cpp
LatinHypercube/: CMakeLists.txt  README.md  main.cpp  pbrtloader.cpp  pbrtloader.h
Learning module/: CMakeLists.txt  README.md  config.xml  readme.txt
Learning module/boost/: CMakeLists.txt  config.hpp  cstdint.hpp  filesystem.hpp  noncopyable.hpp
Learning module/boost/config/: abi_prefix.hpp  select_compiler_config.hpp  select_platform_config.hpp  select_stdlib_config.hpp
Learning module/boost/config/platform/: macos.hpp
Learning module/boost/core/: enable_if.hpp  noncopyable.hpp
Learning module/boost/detail/: workaround.hpp
Learning module/boost/filesystem/: config.hpp  path.hpp  path_traits.hpp
Learning module/boost/predef/: make.h  platform.h
Learning module/boost/predef/os/: windows.h
Learning module/boost/predef/platform/: mingw.h  windows_desktop.h  windows_phone.h  windows_runtime.h  windows_store.h
Learning module/boost/system/: config.hpp  error_code.hpp
Learning module/boost/type_traits/: add_pointer.hpp  decay.hpp  integral_constant.hpp  is_array.hpp  is_function.hpp  is_lvalue_reference.hpp  is_reference.hpp  is_rvalue_reference.hpp  remove_bounds.hpp  remove_cv.hpp  remove_extent.hpp  remove_reference.hpp
Learning module/boost/type_traits/detail/: config.hpp
Learning module/boost/utility/: enable_if.hpp
Learning module/opennn/: CMakeLists.txt  data_set.cpp  inputs.cpp  inputs.h  instances.cpp  missing_values.cpp  multilayer_perceptron.cpp  neural_network.cpp  outputs.cpp  outputs.h  perceptron_layer.cpp  scaling_layer.cpp  unscaling_layer.cpp  vector.h  weighted_squared_error.cpp
Learning module/src/: configparser.cpp  configparser.h  datasetparameters.h  learningmodule.cpp  learningmodule.h  main.cpp  neuralnetworkarchitecture.h  neuralnetworkparameters.h  trainer.cpp  trainer.h
PBRT/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  PBRT-V3.sln  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  bsdftest.vcxproj  bsdftest.vcxproj.filters  cyhair2pbrt.vcxproj  cyhair2pbrt.vcxproj.filters  imgtool.vcxproj  imgtool.vcxproj.filters  obj2pbrt.vcxproj  obj2pbrt.vcxproj.filters  pbrt.vcxproj  pbrt.vcxproj.filters  pbrt_exe.vcxproj  pbrt_exe.vcxproj.filters  pbrt_test.vcxproj  pbrt_test.vcxproj.filters  (+1 more)
Sandbox/OpenNN-tests/: CMakeLists.txt  configparser.cpp  neuralnetworkarchitecture.h  readme.txt
Sandbox/OpenNN-tests/datasetcomparator/: CMakeLists.txt  main.cpp
Sandbox/OpenNN-tests/datasetevaluator/: CMakeLists.txt  main.cpp
Sandbox/OpenNN-tests/datasetgenerator/: CMakeLists.txt  main.cpp
(+35 files in other folders)
